fix getting token by user
